--- a/Views/ItemImages/Index.cshtml
+++ b/Views/ItemImages/Index.cshtml
@@ -40,7 +40,7 @@
             </th>
 
             <th>
-                                    Default Image File
+                                    Default Image 
             </th>
                  Actions
             </th>
@@ -57,7 +57,7 @@
                                         @Html.DisplayFor(modelItem => item.IsDefault)
             </td>   
             <td>
-                                        <img src="@Html.DisplayFor(modelItem => item.Item.DefaultImageFile)" alt="DefaultImageFile" />
+                                        <img src="@Html.DisplayFor(modelItem => item.NormalImage)" alt="DefaultImageFile" />
                                     </td>
 
                                     <td style="display: flex;margin-inline-start:0px !important">
