--- a/Views/Home/ItemDetail.cshtml
+++ b/Views/Home/ItemDetail.cshtml
@@ -103,6 +103,7 @@
                                                     <label for="quantity" class="sr-only">Quantity</label>
                                                     <input type="text" id="quantity" title="Quantity" value="1" />
                                                 </div>
+                                                <button class="btn btn-bordered addToWishList">Add to WishList</button>
                                                 <button class="btn btn-bordered addToCart">Add to Cart</button>
                                             </div>
                                         </div>
@@ -280,36 +281,6 @@
 @section Scripts{
     <script>
 
-        // $(document).ready(function () {
-        //     // Handle thumbnail clicks
-        //     $('.thumbnail-image').on('click', function () {
-        //         var normalImage = $(this).data('normal-image');
-        //         var bannerImage = $(this).data('banner-image');
-
-        //         // Update the main image
-        //         $('#mainImage').attr('src', normalImage);
-
-        //         // Update the magnific popup link
-        //         $('#thumb-gallery .pro-thumb-item').attr('data-mfp-src', bannerImage);
-        //     });
-
-        //     // Initialize Magnific Popup for the main image
-        //     $('.product-thumbnail-slider').magnificPopup({
-        //         delegate: 'figure', // child items selector, by clicking on it popup will open
-        //         type: 'image',
-        //         gallery: {
-        //             enabled: true
-        //         }
-        //     });
-
-        //     // Handle the "View Larger" button click
-        //     $('.btn-gallery-popup').on('click', function (e) {
-        //         e.preventDefault();
-        //         $('#thumb-gallery').magnificPopup('open');
-        //     });
-        // });
-
-
         $(document).ready(function () {
             // Handle thumbnail clicks
             $('.thumbnail-image').on('click', function () {
@@ -349,9 +320,33 @@
                     data: { itemId: itemId, quantity: quantity },
                     success: function (response) {
                         if (response.success) {
-                            alert(response.message); // Show success message
+                            alert(response.message);
+                            LoadCartData();// Show success message
                         } else {
-                            alert('Failed to add item to cart');
+                            alert(response.message);
+                        }
+                    },
+                    error: function () {
+                        alert('Error occurred while adding item to cart');
+                    }
+                });
+            });
+
+
+            $('.addToWishList').on('click', function (e) {
+                e.preventDefault();
+                var itemId = @Model.ItemId; // Get the item ID from the model
+                var quantity = $('#quantity').val(); // Get the quantity from the input
+                $.ajax({
+                    type: 'POST',
+                    url: '/addToWishList',
+                    data: { itemId: itemId, quantity: quantity },
+                    success: function (response) {
+                        if (response.success) {
+                            alert(response.message);
+                            LoadCartData();// Show success message
+                        } else {
+                            alert(response.message);
                         }
                     },
                     error: function () {
