--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -689,9 +690,12 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown header-profile">
-                                <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
+										@if (User.Identity.IsAuthenticated)
+										{
+									var name = User.Claims.FirstOrDefault(x => x.Type == ClaimTypes.Name)?.Value;
+									<a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
 									<div class="header-info">
-										<span>Hello, <strong>Admin</strong></span>
+										<span>Hello, <strong>@name</strong></span>
 									</div>
                                     <img src="/adminassets/images/profile/pic1.jpg" width="20" alt=""/>
                                 </a>
@@ -704,11 +708,12 @@
                                         <svg id="icon-inbox" xmlns="http://www.w3.org/2000/svg" class="text-success" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                                         <span class="ms-2">Inbox </span>
                                     </a>
-                                    <a href="page-login.html" class="dropdown-item ai-icon">
+									<a href="Logout" class="dropdown-item ai-icon">
                                         <svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
-                                        <span class="ms-2">Logout </span>
+										<span class="ms-2">Logout </span>
                                     </a>
                                 </div>
+										}
                             </li>
                         </ul>
                     </div>
@@ -725,7 +730,8 @@
         <div class="deznav">
             <div class="deznav-scroll">
 				<ul class="metismenu" id="menu">
-                    
+         
+
                     <li><a href="/Brands/Index" class="ai-icon" aria-expanded="false">
 							<i class="flaticon-381-settings-2"></i>
 							<span class="nav-text">Brands</span>
@@ -872,6 +878,7 @@
                        
                     </li>
 
+				
 
                 </ul>
             
