--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html class="no-js" lang="zxx">
 
 <head>
@@ -33,14 +34,17 @@
     <link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
     <!--== Bootstrap Min CSS ==-->
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-
     <!--== Main Style CSS ==-->
     <link href="/assets/css/style.css" rel="stylesheet" />
     <!--== Helper Min CSS ==-->
     <link href="/assets/css/helper.min.css" rel="stylesheet" />
     <!-- endbuild -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-   
+    <style>
+        .modal-content {
+            width: 60% !important;
+        }
+    </style>
     @RenderSection("Styles", required: false)
 </head>
 
@@ -60,26 +64,29 @@
                 <div class="col-lg-7 d-none d-lg-block">
                     <div class="site-navigation">
                         <ul class="main-menu nav">
-                          
-                            <li><a href="/AdminDashboard/index">Admin</a></li>
+
+
                             <li><a href="/">Home</a></li>
-              
+
                             <li><a asp-controller="Home" asp-action="About">About</a></li>
                             <li><a asp-controller="Home" asp-action="Shop">Shop</a></li>
                             <li><a asp-controller="Home" asp-action="Blog">Blogs</a></li>
-                          
-                            
+
+
                             <li><a href="gallery">Gallery</a></li>
-                            <li class="has-submenu">
-                                <a href="#">Pages</a>
-                                <ul class="sub-menu">
-                                    <li><a asp-controller="Home" asp-action="Cart">Cart</a></li>
-                                    <li><a asp-controller="Home" asp-action="ConfirmOrder">Confirm Order</a></li>
-                                    <li><a asp-controller="Home" asp-action="Checkout">Checkout</a></li>
-                                    <li><a href="wishList">Wishlist</a></li>
-                            
-                                </ul>
-                            </li>
+                            @if (User.IsInRole("Admin") || User.IsInRole("Customer"))
+                            {
+
+                                <li class="has-submenu">
+                                    <a href="#">Pages</a>
+                                    <ul class="sub-menu">
+                                        <li><a asp-controller="Home" asp-action="ConfirmOrder">Confirm Order</a></li>
+                                        <li><a asp-controller="Home" asp-action="Checkout">Checkout</a></li>
+                                        <li><a href="wishList">Wishlist</a></li>
+
+                                    </ul>
+                                </li>
+                            }
                             <li><a asp-controller="Home" asp-action="ContactUS">Contact US</a></li>
                         </ul>
                     </div>
@@ -87,9 +94,51 @@
 
                 <div class="col-sm-8 col-lg-3">
                     <div class="site-action d-flex justify-content-center justify-content-sm-end align-items-center">
-                        <ul class="login-reg-nav nav">
-                            <li><a asp-controller="Authentication" asp-action="Login">Login</a></li>
-                            <li><a asp-controller="Authentication" asp-action="Registeration">Register</a></li>
+                        <ul class="main-menu nav">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                var name = User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Name)?.Value;
+                                <li class="has-submenu" style="width:6rem">
+                                    <a href="#"> @name </a>
+                                    <ul class="sub-menu">
+                                        @if (User.IsInRole("Admin"))
+                                        {
+                                            <li>
+                                                <a href="/AdminDashboard/index">
+                                                    <svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+
+                                                    <span class="ms-2">Dashboard</span>
+                                                </a>
+                                            </li>
+
+
+                                        }
+
+                                        <li>
+                                            <a href="app-profile.html" class="dropdown-item ai-icon">
+                                                <svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                                                <span class="ms-2">Profile </span>
+                                            </a>
+                                        </li>
+
+
+                                        <li>
+
+                                            <a href="Logout" class="dropdown-item ai-icon">
+                                                <svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
+                                                <span class="ms-2">Logout </span>
+                                            </a>
+                                        </li>
+
+
+                                    </ul>
+                                </li>
+                            }
+                            else
+                            {
+                                <li><a id="Login" class="btn btn-light rounded-pill">Login</a></li>
+                                <li><a id="Registeration" class="btn btn-light rounded-pill">Register</a></li>
+                            }
                         </ul>
 
                         <div class="mini-cart-wrap">
@@ -98,58 +147,8 @@
                                 <span class="cart-total" id="cartTotalId">0</span>
                             </a>
 
-                            <div class="mini-cart-content">
-                                <div class="mini-cart-product">
-                                    <div class="mini-product">
-                                        <div class="mini-product__thumb">
-                                            <a href="single-product.html"><img src="/assets/img/product/product-1.png" alt="product" /></a>
-                                        </div>
-                                        <div class="mini-product__info">
-                                            <h2 class="title"><a href="single-product.html">Auto Clutch & Brake</a></h2>
-
-                                            <div class="mini-calculation">
-                                                <p class="price">5 x <span>$20.33</span></p>
-                                                <button class="remove-pro"><i class="ion-trash-b"></i></button>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="mini-product">
-                                        <div class="mini-product__thumb">
-                                            <a href="single-product.html"><img src="/assets/img/product/product-2.png" alt="product" /></a>
-                                        </div>
-                                        <div class="mini-product__info">
-                                            <h2 class="title"><a href="single-product.html">Leather Steering Wheel</a></h2>
-
-                                            <div class="mini-calculation">
-                                                <p class="price">5 x <span>$20.33</span></p>
-                                                <button class="remove-pro"><i class="ion-trash-b"></i></button>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="mini-product">
-                                        <div class="mini-product__thumb">
-                                            <a href="single-product.html"><img src="/assets/img/product/product-3.png" alt="product" /></a>
-                                        </div>
-                                        <div class="mini-product__info">
-                                            <h2 class="title"><a href="single-product.html">Leather Steering Wheel</a></h2>
-
-                                            <div class="mini-calculation">
-                                                <p class="price">5 x <span>$20.33</span></p>
-                                                <button class="remove-pro"><i class="ion-trash-b"></i></button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
-                        <div class="responsive-menu d-lg-none">
-                            <button class="btn-menu">
-                                <i class="fa fa-bars"></i>
-                            </button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -283,11 +282,42 @@
             </div>
         </div>
     </aside>
+    <div class="modal fade bd-example-modal-lg" id="LoginModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="CreateModalHeader">User Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal">
+                    </button>
+                </div>
+
+                @await Html.PartialAsync("/Views/Authentication/_Login.cshtml", new Login())
+
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" id="RegisterationModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="CreateModalHeader">User Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal">
+                    </button>
+                </div>
+
+                @await Html.PartialAsync("/Views/Authentication/_Registeration.cshtml", new Registeration())
+
+
+            </div>
+        </div>
+    </div>
     <!--== End Responsive Menu Wrapper ==-->
     <!--=======================Javascript============================-->
     <!-- build:js ./assets/js/app.min.js -->
     <!--=== Modernizr Min Js ===-->
-   
+
     <script src="/assets/js/modernizr-3.6.0.min.js"></script>
     <!--=== jQuery Min Js ===-->
     <script src="/assets/js/jquery.min.js"></script>
@@ -317,8 +347,24 @@
         $(document).ready(function () {
             LoadCartData();
         });
+        $("#Login").click(function () {
 
-        function LoadCartData(){
+
+            $("#LoginModal").modal("show")
+
+        });
+        $("#Registeration").click(function () {
+
+
+            $("#RegisterationModal").modal("show")
+
+        });
+        $(document).ajaxError(function (event, jqXHR) {
+            if (jqXHR.status === 403) {
+                $('#forbiddenModal').modal('show');
+            }
+        });
+        function LoadCartData() {
 
             $.ajax({
                 type: 'GET',
@@ -326,7 +372,7 @@
 
                 success: function (response) {
                     if (response.success) {
-
+                      
                         $("#cartTotalId").html(response.message);
                         // Show success message
                     } else {
