--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -1,4 +1,4 @@
-﻿@model AutoPartsHub.Models.TblOrdersMain
+﻿@model AutoPartsHub.Models.CheckoutViewModel
 @{
     ViewData["Title"] = "checkout";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -36,15 +36,6 @@
                 </div>
        
 
-          
-                @if (Model.UserId <= 0)
-                {
-                    <div class="woocommerce-form-login-toggle">
-                        <div class="woocommerce-info ">If you are returning customer? Then <a class="showlogin " data-bs-toggle="modal" id="btnLoginModal" data-bs-target="#staticBackdrop">Click here to login</a></div>
-                    </div>
-
-
-                }
         
 
             
@@ -56,55 +47,57 @@
                         <h2>Billing Details</h2>
                         <div class="billing-form-wrap">
                             <form asp-controller="Home" asp-action="Checkout" method="post">
-                               
+                                <input asp-for="TblOrdersMain.UserId" type="hidden" />
 
-                                    <div class="col-md-12">
-                                        <div class="input-item mt-0">
-                                            <label for="f_name" class="sr-only required">First Name</label>
-                                            <input type="text" asp-for="User.UserName" id="f_name" placeholder="First Name" required />
-                                        </div>
+
+                                <div class="col-md-12">
+                                    <div class="input-item mt-0">
+                                        <label for="f_name" class="sr-only required">First Name</label>
+                                        <input type="text" asp-for="TblOrdersMain.User.UserName" id="f_name" placeholder="First Name" required />
                                     </div>
+                                </div>
 
                                 <div class="input-item">
                                     <label for="email" class="sr-only required">Email Address</label>
-                                    <input type="email" asp-for="Email" id="email" placeholder="Email Address" required />
+                                    <input type="email" asp-for="TblOrdersMain.Email" id="email" placeholder="Email Address" required />
+                                </div>
+
+                                <div class="input-item">
+                                    <label for="phone" class="sr-only">Phone</label>
+                                    <input type="text" asp-for="TblOrdersMain.PhoneNo" id="phone" placeholder="Phone" />
                                 </div>
 
                                 <div class="col-md-12 mt-4">
-                                    <label asp-for="CountryId" class="sr-only required">Country</label>
-                                    <select asp-for="CountryId" asp-items="ViewBag.CountryId">
+                                    <label asp-for="TblOrdersMain.CountryId" class="sr-only required">Country</label>
+                                    <select asp-for="TblOrdersMain.CountryId" asp-items="ViewBag.CountryId">
                                         <option>&nbsp;&nbsp;&nbsp; ----- Select Country -----</option>
                                     </select>
                                 </div>
 
                                 <div class="col-md-12 mt-4">
-                                    <label asp-for="ProvinceId" class="sr-only required">Provice</label>
-                                    <select asp-for="ProvinceId" asp-items="ViewBag.ProvinceId">
+                                    <label asp-for="TblOrdersMain.ProvinceId" class="sr-only required">Provice</label>
+                                    <select asp-for="TblOrdersMain.ProvinceId" asp-items="ViewBag.ProvinceId">
                                         <option>&nbsp;&nbsp;&nbsp; ----- Select Province -----</option>
                                     </select>
                                 </div>
                                 <div class="col-md-12 mt-4">
-                                    <label asp-for="CityId" class="sr-only required">City</label>
-                                    <select asp-for="CityId" asp-items="ViewBag.CityId">
+                                    <label asp-for="TblOrdersMain.CityId" class="sr-only required">City</label>
+                                    <select asp-for="TblOrdersMain.CityId" asp-items="ViewBag.CityId">
                                         <option>&nbsp;&nbsp;&nbsp; ----- Select City -----</option>
                                     </select>
                                 </div>
                                 <div class="input-item">
                                     <label for="street-address" class="sr-only required">Street address</label>
-                                    <input type="text" asp-for="DeliveryAddress" id="street-address" placeholder="Street address Line 1" required />
+                                    <input type="text" asp-for="TblOrdersMain.DeliveryAddress" id="street-address" placeholder="Street address Line 1" required />
                                 </div>
 
 
 
                                 <div class="input-item">
                                     <label for="postcode" class="sr-only required">Postcode / ZIP</label>
-                                    <input type="text" asp-for="PostelCode" id="postcode" placeholder="Postcode / ZIP" required />
+                                    <input type="text" asp-for="TblOrdersMain.PostelCode" id="postcode" placeholder="Postcode / ZIP" required />
                                 </div>
 
-                                <div class="input-item">
-                                    <label for="phone" class="sr-only">Phone</label>
-                                    <input type="text" asp-for="PhoneNo" id="phone" placeholder="Phone" />
-                                </div>
 
                                 <div class="row mt-5 mb-5">
                                     <div class="col-sm-12 mb-3 ">
@@ -112,7 +105,7 @@
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" asp-for="PaymentType" asp-formaction="PaymentType" id="exampleRadios1" value="cash" checked>
+                                            <input class="form-check-input" type="radio" asp-for="TblOrdersMain.PaymentType" asp-formaction="PaymentType" id="exampleRadios1" value="cash" checked>
                                             <label class="form-check-label " for="exampleRadios1">
                                                 <img src="/Images/cash-on-delivery.png" class="w-25" /> Cash On Delivery
 
@@ -121,7 +114,7 @@
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-check form-check-inline ">
-                                            <input class="form-check-input " type="radio" asp-for="PaymentType" asp-formaction="PaymentType" id="exampleRadios2" value="card">
+                                            <input class="form-check-input " type="radio" asp-for="TblOrdersMain.PaymentType" asp-formaction="PaymentType" id="exampleRadios2" value="card">
                                             <label class="form-check-label" for="exampleRadios2">
                                                 <img src="/Images/atm-card.png" class="w-25" /> Card payments
 
@@ -157,19 +150,19 @@
                                 <tbody>
                                     @{
                                         decimal? subtotal = 0;
-                                        if (Model != null && Model.Item != null && Model.Item.Any())
+                                        if (Model != null && Model.TblItems != null)
                                         {
-                                            foreach (var item in Model.Item)
+                                            foreach (var item in Model.TblItems)
                                             {
                                                 subtotal += item.ItemPrice * item.Quantity;
                                             }
                                         }
                                     }
-                             
-                                        @if (Model != null && Model.Item != null && Model.Item.Any())
+
+                                    @if (Model != null && Model.TblItems != null && Model.TblItems.Any())
+                                    {
+                                        foreach (var item in Model.TblItems)
                                         {
-                                            @foreach (var item in Model.Item)
-                                            {
                                             <tr class="cart-item">
                                                 <td>
                                                     <span class="product-title">@item.ItemName</span>
@@ -177,14 +170,14 @@
                                                 </td>
                                                 <td>@item.ItemPrice</td>
                                             </tr>
-                                            }
                                         }
-                                        else
-                                        {
+                                    }
+                                    else
+                                    {
                                         <tr>
                                             <td colspan="2">No items found.</td>
                                         </tr>
-                                        }
+                                    }
                                 </tbody>
                                 <tfoot>
                                     <tr class="cart-subtotal">
