--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <title>AutoPartsHub - Car Parts Store eCommerce HTML Template</title>
 
     <!--== Favicon ==-->
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/img/AutoLogo.png" type="image/x-icon" />
 
     <!--== Google Fonts ==-->
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700%7CPoppins:400,400i,500,600&amp;display=swap" rel="stylesheet">
@@ -115,7 +115,7 @@
                                         }
 
                                         <li>
-                                            <a href="app-profile.html" class="dropdown-item ai-icon">
+                                            <a asp-controller="Home" asp-action="MyAccount" class="dropdown-item ai-icon">
                                                 <svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
                                                 <span class="ms-2">Profile </span>
                                             </a>
@@ -180,7 +180,7 @@
                             <div class="widget-body">
                                 <ul class="widget-list">
                                     <li><a href="#">Our company</a></li>
-                                    <li><a href="#">Contact us</a></li>
+                                    <li><a asp-controller="Home" asp-action="ContactUS">Contact us</a></li>
                                     <li><a href="#">Our services</a></li>
                                     <li><a href="#">Why We?</a></li>
                                     <li><a href="#">Careers</a></li>
@@ -194,11 +194,11 @@
                             <h4 class="widget-title">Quicklink</h4>
                             <div class="widget-body">
                                 <ul class="widget-list">
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Shop</a></li>
-                                    <li><a href="#">Cart</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="about">About</a></li>
+                                    <li><a href="blog">Blog</a></li>
+                                    <li><a href="shop">Shop</a></li>
+                                    <li><a asp-controller="Home" asp-action="Cart">Cart</a></li>
+                                    <li><a asp-controller="Home" asp-action="ContactUS">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -209,8 +209,8 @@
                             <h4 class="widget-title">Support</h4>
                             <div class="widget-body">
                                 <ul class="widget-list">
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="blog">Blog</a></li>
+                                    <li><a asp-controller="Home" asp-action="ContactUS">Contact</a></li>
                                     <li><a href="#">Return Policy</a></li>
                                     <li><a href="#">Online Support</a></li>
                                     <li><a href="#">Money Back</a></li>
